# 2-bits-Quantization

./: LICENSE  LoRA.py  build.sh  chain.py  datautils.py  llm_backend.py  main.py  readme.md  requirements.txt  requirements_web.txt  web_agent.py
Quantization/: W2A16.py  __init__.py  quant.py
csrc/: CMakeLists.txt  w2a16.cu
